manifests/argocd/virtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec: 
  gateways:
  - istio-system/ingress-gateway
  hosts: 
  - "argocd.ops.v3.lcl.time-keeper.watch"
  http:
  - match:
    - uri:
        prefix: /
    route: 
    - destination: 
        host: argocd-server.argocd.svc.cluster.local
        port: 
          number: 80
